# dagny_robomagellan

cone_detector/: CMakeLists.txt  package.xml
cone_detector/cfg/: ConeDetector.cfg
cone_finder/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cone_finder/scripts/: cone_finder  test_color_svm  train_color_svm
cone_finder/src/cone_finder/: blob.py  color_classifier.py  hsv_thresholder.py  training_gui.py
cone_finder/training_data/cone/: 0  1  2  3  4
goal_list/: CMakeLists.txt  manifest.xml  package.xml
goal_list/include/goal_list/: gps.h
goal_list/scripts/: adjust_goals.py  kml2yaml.py
goal_list/src/: goal_list.cpp  goal_list_utm.cpp  gps.cpp  test.cpp
path_planner/: CMakeLists.txt  manifest.xml  package.xml
path_planner/cfg/: PathPlanner.cfg
path_planner/src/: path_planner.cpp
utm_tf_publisher/: CMakeLists.txt  package.xml
utm_tf_publisher/src/: utm_tf_publisher.cpp
