<package>
  <name>cone_finder</name>
  <version>0.1.0</version>
  <description>cone_finder</description>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
  <!--
  <maintainer email="">Jonathan Binney</maintainer>
  -->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/cone_finder</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jonathan Binney</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->

</package>
