<package>
  <name>goal_list</name>
  <version>0.1.0</version>
  <description>goal_list</description>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/goal_list</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dagny_driver</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>dagny_driver</run_depend>
  <run_depend>geodesy</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
